--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -10,3 +10,15 @@
     --font-sans: 'Instrument Sans', ui-sans-serif, system-ui, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji',
         'Segoe UI Symbol', 'Noto Color Emoji';
 }
+
+.nav-link {
+    @apply px-3 py-2 rounded-md text-sm font-medium;
+}
+
+.nav-link:not(.active) {
+    @apply text-gray-500 hover:text-gray-700 hover:bg-gray-50;
+}
+
+.nav-link.active {
+    @apply bg-[#1B6149] text-white;
+}
